parser/test/corpus/expr
=================================
Associativity Check
=================================
5 + 2
---
(mel
 (expr
  (simple_expr
   (binary_expr
	  (expr
	   (simple_expr
	    (literal_expr
	     (literal
		    (number_literal)
		   )
		  )
		 )
	  )
	  (binary_infix_operator
	   (math_operator
		  (plus)
		 )
	  )
    (expr
	   (simple_expr
	    (literal_expr
	     (literal
		    (number_literal)
		   )
		  )
		 )
	  )
	 )
	)
 )
)

=================================
Associativity Check
=================================
5 + 2 - 3
---
(mel
 (expr
  (simple_expr
   (binary_expr
	  (expr
	   (simple_expr
      (binary_expr
	     (expr
		    (simple_expr
	       (literal_expr
	        (literal
		       (number_literal)
		      )
		     )
	      )
		   )
	     (binary_infix_operator
	      (math_operator
		     (plus)
		    )
	     )
       (expr
		    (simple_expr
	       (literal_expr
	        (literal
		       (number_literal)
		      )
		     )
			  )
	     )
	    )
		 )
    )
    (binary_infix_operator
     (math_operator
		  (minus)
		 )
	  )
    (expr
	   (simple_expr
	    (literal_expr
	     (literal
	     (number_literal)
	     )
      )
		 )
	  )
	 )
  )
 )
)

=================================
Associativity Check
=================================
5 + 2 - 3 + 6
---
(mel
 (expr
  (simple_expr
   (binary_expr
	  (expr
     (simple_expr
      (binary_expr
	     (expr
	      (simple_expr
         (binary_expr
			    (expr
	         (simple_expr
	          (literal_expr
	           (literal
		          (number_literal)
		         )
		        )
				   )
	        )
	        (binary_infix_operator
	         (math_operator
		        (plus)
		       )
	        )
			    (expr
	         (simple_expr
	          (literal_expr
	           (literal
		          (number_literal)
		         )
		        )
				   )
	        )
         )
			  )
		   )
	     (binary_infix_operator
	      (math_operator
		     (minus)
		    )
	     )
		   (expr
	      (simple_expr
         (literal_expr
          (literal
	         (number_literal)
	        )
		     )
			  )
		   )
		  )
		 )
	  )
    (binary_infix_operator
     (math_operator
		  (plus)
		 )
	  )
    (expr
     (simple_expr
	    (literal_expr
	     (literal
	     (number_literal)
	     )
      )
		 )
	  )
	 )
  )
 )
)
=================================
Associativity Check
=================================
5 + ( 2 - 3 )
---
(mel
 (expr
  (simple_expr
   (binary_expr
	  (expr
		(simple_expr
      (literal_expr
       (literal
        (number_literal)
		   )
		  )
	   )
	  )
    (binary_infix_operator
     (math_operator
      (plus)
     )
    )
    (expr
     (grouped_expr
	    (expr
		   (simple_expr
			  (binary_expr
				 (expr
				  (simple_expr
					 (literal_expr
					  (literal
						 (number_literal)
						)
					 )
					)
				 )
         (binary_infix_operator
          (math_operator
		       (minus)
		      )
	       )
         (expr
				  (simple_expr
					 (literal_expr
					  (literal
						 (number_literal)
						)
					 )
					)
				 )
			  )
			 )
		  )
		 )
	  )
	 )
  )
 )
)
=================================
Unary Expression Check
=================================
true and ! false
---
(mel
 (expr
  (simple_expr
   (binary_expr
	  (expr
		(simple_expr
      (literal_expr
       (literal
        (boolean_literal)
		   )
		  )
	   )
	  )
    (binary_infix_operator
     (logic_operator
      (and)
     )
    )
    (expr
     (simple_expr
	    (prefix_expr
			 (prefix_operator
			  (bang)
			 )
			 (expr
			  (simple_expr
				 (literal_expr
				  (literal
					 (boolean_literal)
					)
				 )
				)
			 )
			)
		 )
		)
	 )
	)
 )
)
